@@ -25,3 +25,4 @@ examples/decode
 examples/encode
 ._d/
 .*sw*
+.merlin
